--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact Info</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets\css\reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets\css\style.css" />
+    <script src="main.js"></script>
 </head>
 <body>
     <section id: "contact-info">
