--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" media="screen" href="assets\css\reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="assets\css\portfolio.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets\css\style.css" />
     <title>Portfolio</title>
 </head>
 <body>
