--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,81 @@
+<!--Activity 1: Basic HTML Bio-->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Activity 1: Basic HTML Bio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets\css\reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets\css\style.css" />
-    <title>Portfolio</title>
+    <script src="main.js"></script>
 </head>
 <body>
-    <p>This is my portfolio.</p>
+    <header>
+        <div class="headercontent">
+            <h1>Colin McPike</h1>
+
+            <nav>
+                <a href="index.html" class="about">About</a>
+                <a href="contact.html" class="about">Contact</a>
+                <a href="portfolio.html" class="about">Portfolio</a>
+            </nav>
+
+        </div>
+    </header>
+
+    <div class="container">
+
+        <h2>You Know You Want This</h2>
+    
+        <section>
+
+            <div class="row">
+                <div class="column">
+                    <div class="image">
+                        <img src="https://dummyimage.com/200x200/000/fff.jpg&text=Project+Image" alt="dummyimage" id="bio-image">
+                        <div class="text-block">
+                            <h4>Project 1</h4>
+                        </div>
+                    </div>
+                    <div class="image"></div>
+                        <img src="https://dummyimage.com/200x200/000/fff.jpg&text=Project+Image" alt="dummyimage" id="bio-image">
+                        <div class="text-block">
+                            <h4>Project 2</h4>
+                        </div>
+                    </div>
+                    <div class="image">
+                        <img src="https://dummyimage.com/200x200/000/fff.jpg&text=Project+Image" alt="dummyimage" id="bio-image">
+                        <div class="text-block">
+                            <h4>Project 3</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="image">
+                    <img src="https://dummyimage.com/200x200/000/fff.jpg&text=Project+Image" alt="dummyimage" id="bio-image">
+                        <div class="text-block">
+                            <h4>Project 4</h4>
+                        </div>
+                    </div>
+                    <div class="image"></div>
+                    <img src="https://dummyimage.com/200x200/000/fff.jpg&text=Project+Image" alt="dummyimage" id="bio-image">
+                        <div class="text-block">
+                            <h4>Project 5</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+   
+        </section>
+
+    </div>
+
+    <footer class="footer1">
+        Copyright &copy;
+    </footer>
+
 </body>
+
 </html>
